<resources>
    <string name="app_name">APPCCA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_title_condensed">CCA</string>
    <string name="menu_title">CCA</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cca">Consorcio Conservación Andahuaylas</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="singin">INICIAR SESIÓN</string>
    <string name="dsige">DSIGE V 1.0.0</string>
    <string name="login">Iniciando Sesión</string>
    <string name="sync">Sincronizar datos</string>
    <string name="start_activity">Inicio de Actividades</string>
    <string name="form_activity">Formulario de Actividades</string>
    <string name="send">Enviar datos</string>
    <string name="logout">Cerrar sesión</string>
    <string name="fab_menu">fab_menu</string>
    <string name="hint_selected_activity">Selecciona Actividad</string>
    <string name="hint_selected_sub_activity">Selecciona Sub Actividad</string>
    <string name="title_continue">Continuar</string>

    <item name="fab_video" type="id" />
    <item name="fab_photo" type="id" />

</resources>